@@ -1,6 +1,6 @@
 #!/bin/sh
 
-XDAG_VERSION="0.4.6"
+XDAG_VERSION="0.4.7"
 XDAG_JARNAME="xdagj-${XDAG_VERSION}-shaded.jar"
 XDAG_OPTS="-t"
 
@@ -13,5 +13,13 @@ XDAG_OPTS="-t"
 # default JVM options
 JAVA_OPTS="--add-opens java.base/java.nio=ALL-UNNAMED --add-opens java.base/sun.nio.ch=ALL-UNNAMED -server -Xms1g -Xmx1g"
 
+JAVA_HEAPDUMP="-XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=./logs/xdag-heapdump"
+
+JAVA_GC_LOG="-Xlog:gc*,gc+heap=trace,gc+age=trace,safepoint:file=./logs/xdag-gc-%t.log:time,level,tid,tags:filecount=8,filesize=10m"
+
+if [ ! -d "logs" ];then
+  mkdir "logs"
+fi
+
 # start kernel
-java ${JAVA_OPTS} -cp .:${XDAG_JARNAME} io.xdag.Bootstrap "$@"
+java ${JAVA_OPTS} ${JAVA_HEAPDUMP} ${JAVA_GC_LOG} -cp .:${XDAG_JARNAME} io.xdag.Bootstrap "$@"
